fix: spacing bug on cta content at medium screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ ul#footer-social {
 }
 
 .cta-content {
-    padding-top: 13%;
+    padding-top: 40px;
     padding-right: 15%;
     padding-left: 15%;
 }
@@ -137,6 +137,7 @@ ul#footer-social {
 a.btn.btn-primary.btn-lg {
     background-color: #D85656;
     border: none;
+    margin-top: 10px;
 }
 
 a.btn.btn-primary.btn-lg:hover {
